--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-PORT=3002
+PORT=10100
+
+REACT_APP_IMAGE_UPLOAD_URL=http://localhost:7004/file/upload
+REACT_APP_SFS_URL=http://localhost:7004/file?name=
