--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snowball",
+  "name": "juicy",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -57,12 +57,12 @@
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.2.0"
-  },
-  "dependencies": {
+    "workbox-webpack-plugin": "4.2.0",
     "canvas": "^2.5.0",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "preact": "^10.0.0-rc.1"
   },
+  "dependencies": {},
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
