--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
         "plugin:flowtype/recommended"
     ],
     "rules": {
+        "jsx-a11y/anchor-is-valid": "off",
         "no-restricted-globals": "off",
         "semi": "error",
         "no-multi-spaces": "error",
