--- a/package.json
+++ b/package.json
@@ -75,14 +75,12 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "android >= 2.3",
+      "ios_saf > 6"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "android >= 2.3",
+      "ios_saf > 6"
     ]
   },
   "jest": {
