update build info

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=10100
 
 REACT_APP_IMAGE_UPLOAD_URL=http://localhost:7004/file/upload
 REACT_APP_SFS_URL=http://localhost:7004/file?name=
+REACT_APP_API_URL=
