--- a/build-config/config.json
+++ b/build-config/config.json
@@ -1,6 +1,8 @@
 {
     "buildCommands": [
         "npm install",
+        "ln -s /data/static/snowball ./node_modules/snowball",
+        "ln -s /data/static/sn-app ./node_modules/sn-app",
         "npm run build"
     ],
     "autoConfig": [
